--- a/dockerfiles/Dockerfile-prod
+++ b/dockerfiles/Dockerfile-prod
@@ -1,13 +1,9 @@
-FROM grisuu/typo3base:7.6
+FROM pluto:5000/grisuu/typo3base:7.6
 
 #USER www-data
 
 COPY ./sources /var/www/html/
 COPY ./scripts/entrypoint.sh /
-
-#noetig um Probleme mit de, owner des Hostsystems zu umgehen. TODO: uid des Hostsystems als ARG uebergeben
-#RUN usermod -u $user_id www-data && groupmod -g $group_id www-data
-#RUN chown -R www-data:www-data /var/www
 
 WORKDIR /var/www/html
 
