--- a/template/Dockerfile-prod
+++ b/template/Dockerfile-prod
@@ -10,5 +10,5 @@ WORKDIR /var/www/html
 #run composer to build new TYPO3 project
 RUN composer.phar update --prefer-stable --prefer-source -o --no-dev
 
-RUN mv .htaccess_prod .htaccess && chown -R www-data:www-data /var/www/html
+RUN [ -f .htaccess_prod ] && mv .htaccess_prod .htaccess; chown -R www-data:www-data /var/www/html
 CMD ["/entrypoint.sh"]
