--- a/template/docker-compose.local.yml
+++ b/template/docker-compose.local.yml
@@ -4,7 +4,7 @@ services:
         build:
             context: .
             dockerfile: dockerfiles/Dockerfile-install
-        container_name: [projectname]_web_local
+        container_name: ###projectname###_web_local
         volumes:
             - './sources:/var/www/html/'
         environment:
